Add tooltips to bar graph

--- a/_includes/demo_1/external_js.html
+++ b/_includes/demo_1/external_js.html
@@ -1,4 +1,4 @@
-<!-- external_js.html - load external JavaScript libraries -->
+<!-- demo_1/external_js.html - load external JavaScript libraries -->
 
 <script>var ENV = { EXTEND_PROTOTYPES: false };</script>
 <script src="../external/jquery.min.js"></script>
