--- a/_layouts/demo_1.html
+++ b/_layouts/demo_1.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>
-      SPARQLy GUIs{% if page.title %} ~ {{ page.title }}{% endif %}
+      {% if page.title %}{{ page.title }} - {% endif %}SPARQLy GUIs
     </title>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
