Major rework - Jekyll.2012.0226i.s

--- a/_layouts/demo_2.html
+++ b/_layouts/demo_2.html
@@ -14,15 +14,16 @@
 
     <script type="text/coffeescript">
 # <![CDATA[
-{% include demo_1/lib_chart.coffee %}
-{% include demo_1/lib_query.coffee %}
-{% include demo_1/lib_table.coffee %}
-{% include demo_1/main.coffee %}
+{% include demo_2/lib_chart.coffee %}
+{% include demo_2/lib_query.coffee %}
+{% include demo_2/lib_table.coffee %}
+{% include demo_2/main.coffee %}
 # ]]>
     </script>
 
     <style type="text/css">
       @import url(/styles/default.css);
+      @import url(/styles/demo_2.css);
     </style>
   </head>
 
