--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,15 +9,17 @@
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta http-equiv="content-language" content="en" />
+
+    <style type="text/css">
+      @import url(/styles/default.css);
+    </style>
   </head>
 
   <body>
     <div id="container">
       <h1>{{ page.title }}</h1>
 
-      <table width=800><tr><td>
-        {{ content }}
-      </td></tr></table>
+      {{ content }}
     </div>
   </body>
 </html>
