--- a/_layouts/level_0.html
+++ b/_layouts/level_0.html
@@ -4,14 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>
-      SPARQLy GUIs{% if page.title %} ~ {{ page.title }}{% endif %}
+      {% if page.title %}{{ page.title }} - {% endif %}SPARQLy GUIs
     </title>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta http-equiv="content-language" content="en" />
 
     <style type="text/css">
-      @import url(/styles/default.css);
+      @import url(styles/default.css);
     </style>
   </head>
 
