Use _includes/styles, etc.

--- a/_includes/demo_1/external_js.html
+++ b/_includes/demo_1/external_js.html
@@ -1,4 +1,5 @@
-<!-- demo_1/external_js.html - load external JavaScript libraries -->
+<!-- _includes/demo_1/external_js.html
+     load external JavaScript libraries -->
 
 <script>var ENV = { EXTEND_PROTOTYPES: false };</script>
 <script src="../external/jquery.min.js"></script>
