--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <meta http-equiv="content-language" content="en" />
 
     <style type="text/css">
-      @import url(styles/default.css);
+{% include styles/default.css %}
     </style>
   </head>
 
