--- a/_layouts/demo_1.html
+++ b/_layouts/demo_1.html
@@ -22,7 +22,7 @@
     </script>
 
     <style type="text/css">
-      @import url(../styles/default.css);
+{% include styles/default.css %}
     </style>
   </head>
 
