--- a/_layouts/demo_2.html
+++ b/_layouts/demo_2.html
@@ -22,8 +22,8 @@
     </script>
 
     <style type="text/css">
-      @import url(../styles/default.css);
-      @import url(../styles/demo_2.css);
+{% include styles/default.css %}
+{% include styles/demo_2.css %}
     </style>
   </head>
 
