--- a/_layouts/s_demo_1.html
+++ b/_layouts/s_demo_1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
+<!-- _layouts/g_demo.html (becomes s_demo_*.html) -->
+
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>
@@ -22,10 +24,10 @@
 
 <script type="text/coffeescript">
 # <![CDATA[
-{% include demo_1/lib_chart.coffee %}
-{% include demo_1/lib_query.coffee %}
-{% include demo_1/lib_table.coffee %}
-{% include demo_1/main.coffee %}
+{% include scripts/demo_1/lib_chart.coffee %}
+{% include scripts/demo_1/lib_query.coffee %}
+{% include scripts/demo_1/lib_table.coffee %}
+{% include scripts/demo_1/main.coffee %}
 # ]]>
 </script>
 
