--- a/_layouts/s_demo_2.html
+++ b/_layouts/s_demo_2.html
@@ -14,12 +14,12 @@
 
 <!-- Load external JavaScript libraries. -->
 
-<script src='../external/jquery-1.7.1.min.js'></script>
+<script src='../external/jquery-1.7.1.js'></script>
 
 <script>var ENV = { EXTEND_PROTOTYPES: false };</script>
-<script src='../external/ember-0.9.5.min.js'></script>
+<script src='../external/ember-0.9.5.js'></script>
 
-<script src='../external/d3.v2.min.js'></script>
+<script src='../external/d3.v2.js'></script>
 
 <script src='../external/coffee-script.js'></script>
 
